# CD-HSSRL

./: README.md  requirements.txt
CD-HSSRL Code/: e2e_resumable.py
CD-HSSRL Code/baselines/: baseline_base.py  baselines_01.py  baselines_02.py  baselines_03.py  baselines_04.py  run_baselines.py
CD-HSSRL Code/controller/: sccc.py  test_sccc.py
CD-HSSRL Code/env/: amphibious_sim_env.py  ky3_gazebo_env.py  ky3_ros_interface.py  test_gazebo_connection.py
CD-HSSRL Code/planner/: cd_grp.py  test_cd_grp.py
CD-HSSRL Code/policy/: hssp.py  test_hssp.py
CD-HSSRL Code/train/: eval_cd_hssrl.py  train_cd_hssrl.py
uuv_simulator-noetic/: uuv_simulator-noetic.lnk
uuv_simulator-noetic/ky3_origin_control/: CMakeLists.txt  package.xml
uuv_simulator-noetic/ky3_origin_control/config/: thruster_manager.yaml
uuv_simulator-noetic/ky3_origin_control/launch/: start_thruster_manager.launch
uuv_simulator-noetic/ky3_origin_control/src/: robot_control.py
uuv_simulator-noetic/ky_2/: CMakeLists.txt  package.xml
uuv_simulator-noetic/ky_2/config/: controllers.yaml  joint_names_ky_2.yaml  ky_2.rviz
uuv_simulator-noetic/ky_2/launch/: dispaly_test.launch  display.launch  gazebo.launch  gazebo_move.launch  gazebo_old.launch  ky2_gazebo.launch  my_gazebo(复件).launch  my_gazebo.launch  test_user_gazebo.launch
uuv_simulator-noetic/ky_2/meshes/: c11_Link.STL  c12_Link.STL  c13_Link.STL  c14_Link.STL  c15_Link.STL  c16_Link.STL  c21_Link.STL  c22_Link.STL  (+14 more)
uuv_simulator-noetic/ky_3/: CMakeLists.txt  package.xml
uuv_simulator-noetic/ky_3/config/: controllers.yaml  joint_names_ky_3.yaml  pid_gains.yaml
uuv_simulator-noetic/ky_3/launch/: complex_world_without_ultrasonic.launch  display.launch  gazebo(复件).launch  gazebo.launch  gazebo.launch.bak  gazebo改成三个驱动轮前备份.launch  ky2_world.launch  simple_world_without_ultrasonic.launch
uuv_simulator-noetic/ky_3/meshes/: GPS_Link.STL  depth_Link.STL  gyro_Link.STL  motor1_Link.STL  motor1_add3_Link.STL  motor1_add4_Link.STL  motor2_Link.STL  propeller1_Link.STL  propeller2_Link.STL  propeller3_Link.STL  propeller4_Link.STL  propeller5_Link.STL  propeller6_Link.STL  propeller7_Link.STL  propeller8_Link.STL
uuv_simulator-noetic/ky_3/urdf/: four_wheel.urdf  ky_3.urdf  ky_3.xacro  ky_3.xacro.bak  ky_3.xacro.bak.20250819_1  ky_3.xacro.bak2  ky_3.xacro.bak_20260207.add_third_driver_wheel.failedRun  ky_3_without_ultrasonic - 副本.xacro  ky_3_without_ultrasonic.xacro  ky_3_without_ultrasonic_before_change_controller.xacro  ky_3改单侧三个驱动轮前备份.xacro
(+42 files in other folders)
