<?xml version="1.0"?>
<package format="2">
  <name>ky3_origin_control</name>
  <version>0.0.0</version>
  <description>The ky3_origin_control package</description>
  <maintainer email="ls@todo.todo">ls</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>uuv_gazebo_ros_plugins_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>uuv_gazebo_ros_plugins_msgs</build_export_depend>
  <build_export_depend>joy</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins_msgs</exec_depend>
  <exec_depend>joy</exec_depend>
    
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
